feat(sor): added list of albums

--- a/SchoolOfRock/Base.lproj/Main.storyboard
+++ b/SchoolOfRock/Base.lproj/Main.storyboard
@@ -19,12 +19,14 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YlJ-dk-9gd">
-                                <rect key="frame" x="16" y="583" width="343" height="30"/>
+                                <rect key="frame" x="16" y="583" width="343" height="49"/>
+                                <color key="backgroundColor" red="0.016804177310000001" green="0.19835099580000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="343" id="XuI-PT-0OZ"/>
-                                    <constraint firstAttribute="height" constant="30" id="x3l-Ka-40A"/>
+                                    <constraint firstAttribute="height" constant="49" id="2GN-is-9gS"/>
                                 </constraints>
-                                <state key="normal" title="LOGIN"/>
+                                <state key="normal" title="LOGIN USING SPOTIFY">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
                                 <connections>
                                     <action selector="tapLogin:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4S4-SO-Y5E"/>
                                 </connections>
@@ -32,16 +34,101 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YlJ-dk-9gd" secondAttribute="bottom" constant="54" id="KGd-1U-QXh"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YlJ-dk-9gd" secondAttribute="trailing" constant="16" id="RbY-dT-DUc"/>
-                            <constraint firstItem="YlJ-dk-9gd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="wae-OT-FPk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YlJ-dk-9gd" secondAttribute="trailing" constant="16" id="1gp-lr-j1d"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YlJ-dk-9gd" secondAttribute="bottom" constant="35" id="E9d-Um-H9j"/>
+                            <constraint firstItem="YlJ-dk-9gd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="16" id="I0d-kg-Ib1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <segue destination="sRz-mz-Rh1" kind="show" identifier="toAlbumListViewController" id="xu3-s2-XO6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="118.29085457271366"/>
+        </scene>
+        <!--Album List View Controller-->
+        <scene sceneID="9ko-p3-dHg">
+            <objects>
+                <viewController id="oAC-ST-KNs" customClass="AlbumListViewController" customModule="SchoolOfRock" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="2WE-cA-emQ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="El9-ye-9zG">
+                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="YKR-R3-lP8"/>
+                                </constraints>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="AlbumTableViewCell" textLabel="Use-Es-jfU" detailTextLabel="7SV-iK-csD" rowHeight="70" style="IBUITableViewCellStyleSubtitle" id="IXz-yV-wvj" customClass="AlbumTableViewCell" customModule="SchoolOfRock" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="70"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IXz-yV-wvj" id="3ec-so-Vdh">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="69.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Use-Es-jfU">
+                                                    <rect key="frame" x="15" y="15" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="7SV-iK-csD">
+                                                    <rect key="frame" x="15" y="38.5" width="44" height="14.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="oAC-ST-KNs" id="AoK-b3-YvF"/>
+                                    <outlet property="delegate" destination="oAC-ST-KNs" id="P57-er-WBP"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="El9-ye-9zG" firstAttribute="bottom" secondItem="mjc-Yd-u75" secondAttribute="bottom" id="Now-qf-dHv"/>
+                            <constraint firstItem="El9-ye-9zG" firstAttribute="top" secondItem="mjc-Yd-u75" secondAttribute="top" id="UfK-cX-qGe"/>
+                            <constraint firstItem="El9-ye-9zG" firstAttribute="leading" secondItem="mjc-Yd-u75" secondAttribute="leading" id="m2N-W9-pg3"/>
+                            <constraint firstItem="El9-ye-9zG" firstAttribute="trailing" secondItem="mjc-Yd-u75" secondAttribute="trailing" id="ynN-va-0az"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="mjc-Yd-u75"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="cUu-bN-nR3"/>
+                    <connections>
+                        <outlet property="tableView" destination="El9-ye-9zG" id="7ne-Gt-8uY"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FEu-jH-TD9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1922.4000000000001" y="118.29085457271366"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="nOT-h7-HJe">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sRz-mz-Rh1" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="CJd-Lo-jMZ">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="oAC-ST-KNs" kind="relationship" relationship="rootViewController" id="E9c-9w-6OX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="AqH-mg-qpK" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="983.20000000000005" y="118.29085457271366"/>
         </scene>
     </scenes>
 </document>
